--- a/finalproject/layout.html
+++ b/finalproject/layout.html
@@ -5,66 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="Css/final.css">
     <title>layout</title>
 </head>
 <style>
-    #header {
-        background-color: lightgrey;
-        height: 100px;
-        border:1px solid;
-    }
-
-    #userinfo,
-    #cheat,
-    #qna {
-        text-align: center;
-        border: 1px;
-        border-bottom-color: black;
-        float: left;
-        margin:10px;
-    }
-
-    #btn1 {
-        float: right;
-    }
-
-    #btn2 {
-        float: right;
-    }
-
-    #menu {
-        background-color: #339999;
-        color: white;
-        height: 80px;
-    }
-
-    #userinfo {
-        background-color: #339999;
-        color: white;
-        height: 30px;
-        margin-left: 60px;
-    }
-
-    #section {
-        width: 200px;
-        text-align: left;
-        height: 800px;
-        padding: 10px;
-    }
-
-    #footer {
-        background-color: #FFCC00;
-        height: 100px;
-        clear: both;
-    }
 </style>
 
 <body>
     <h1>layout 이렇게 하는게 어떠냐???</h1>
     <div id="header">
         <h2>header</h2>
-        <button id="btn1">회원가입</button>
-        <button id="btn2">로그인</button>
+        <div id="user1"><a href="회원가입/일반회원가입.html">일반회원가입</a></div> 
+        <div id="user2"><a href="회원가입/강사회원가입.html">강사회원가입|</div> 
+        <div id="login"><a href="layout.html">로그인|</a></div> 
     </div>
 
     <div id="menu">
