--- a/finalproject/login/login.html
+++ b/finalproject/login/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../Css/final.css">
-    <title>강사회원가입</title>
+    <title>로그인</title>
 </head>
 <style>
 </style>
@@ -14,9 +14,9 @@
 <body>
     <div id="header">
         <h2>header</h2>
-        <div id="user1"><a href="일반회원가입.html">일반회원가입</a></div>
-        <div id="user2">강사회원가입|</div>
-        <div id="login"><a href="../login/login.html">로그인|</a></div>
+        <div id="user1"><a href="../회원가입/일반회원가입.html">일반회원가입</a></div>
+        <div id="user2"><a href="../회원가입/강사회원가입.html">강사회원가입|</a></div>
+        <div id="login">로그인|</div>
     </div>
 
     <div id="menu">
