--- a/finalproject/회원가입/일반회원가입.html
+++ b/finalproject/회원가입/일반회원가입.html
@@ -5,19 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="Css/final.css">
-    <title>layout</title>
+    <link rel="stylesheet" href="../Css/final.css">
+    <title>일반회원가입</title>
 </head>
 <style>
 </style>
 
 <body>
-    <h1>layout 이렇게 하는게 어떠냐???</h1>
     <div id="header">
         <h2>header</h2>
-        <div id="user1">일반회원가입</div> 
-        <div id="user2">강사회원가입|</div> 
-        <div id="login">로그인|</div> 
+        <div id="user1">일반회원가입</div>
+        <div id="user2"><a href="강사회원가입.html">강사회원가입|</div>
+        <div id="login"><a href="../login/login.html">로그인|</a></div>
     </div>
 
     <div id="menu">
