--- a/finalproject/layout.html
+++ b/finalproject/layout.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="Css/final.css">
-    <title>layout</title>
+    <link rel="stylesheet" href="Css\final.css">
+    <title>main</title>
 </head>
 <style>
 </style>
 
 <body>
+    <div>
     <h1>layout 이렇게 하는게 어떠냐???</h1>
     <div id="header">
         <h2>header</h2>
-        <div id="user1"><a href="회원가입/일반회원가입.html">일반회원가입</a></div> 
-        <div id="user2"><a href="회원가입/강사회원가입.html">강사회원가입|</div> 
-        <div id="login"><a href="layout.html">로그인|</a></div> 
+        <div id="user1"><a href="회원가입/일반회원가입.html">일반회원가입</a></div>
+        <div id="user2"><a href="회원가입/강사회원가입.html">강사회원가입|</div>
+        <div id="login"><a href="login/login.html">로그인|</a></div>
     </div>
 
     <div id="menu">
@@ -34,8 +35,14 @@
 
 
     <div id="section">
-        <h2>section</h2>
+        <div class="p1">
+            <p>사진1.사진2.사진3.</p>
+            <p>사진1.사진2.사진3.</p>
+            <p>사진1.사진2.사진3.</p>
+        </div>
     </div>
+
+
 
     <div id="footer">
         <h2>footer</h2>
