--- a/finalproject/login/login.html
+++ b/finalproject/login/login.html
@@ -34,9 +34,17 @@
 
     <div id="section">
         <h2>section</h2>
+        <form>
+              <h1>로그인 하기</h1>
+              <input type="text" id="id" name="id" placeholder="아이디"><br>
+              <input type="password" id="pw1" name="pw1" placeholder="비밀번호"><br>
+              계정이 없으세요? <a href="#">회원가입하기</a>
+          </form>
     </div>
 
     <div id="footer">
         <h2>footer</h2>
     </div>
 </body>
+
+계정이 없으세요? <a href="#">회원가입하기</a>
