--- a/finalproject/회원가입/일반회원가입.html
+++ b/finalproject/회원가입/일반회원가입.html
@@ -34,6 +34,15 @@
 
     <div id="section">
         <h2>section</h2>
+        <form>
+            <input type="text" id="id" name="id" placeholder="아이디"><br>
+            <input type="password" id="pw1" name="pw1" placeholder="비밀번호"><br>
+            <input type="password" id="pw2" name="pw2" placeholder="비밀번호 확인"><br>
+            <input type="text" id="user" name="userName" placeholder="이름을 입력하세요."><br>
+            <input type="text" id="phoneNumber" name="Phone" placeholder="연락처"><br>
+            <button>입력</button>
+        </form>
+
     </div>
 
     <div id="footer">
@@ -42,3 +51,5 @@
 </body>
 
 </html>
+
+&nbsp;
