--- a/finalproject/public/login/강사회원가입.html
+++ b/finalproject/public/login/강사회원가입.html
@@ -14,7 +14,7 @@
 <body>
     <div id="header">
         <h2>header</h2>
-        <div id="user1"><a href="일반회원가입.html">일반회원가입</a></div>
+        <div id="user1"><a href="../login/일반회원가입.html">일반회원가입</a></div>
         <div id="user2">강사회원가입|</div>
         <div id="login"><a href="../login/login.html">로그인|</a></div>
     </div>
