--- a/finalproject/public/main.html
+++ b/finalproject/public/main.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="Css\final.css">
+    <link rel="stylesheet" href="./css/final.css">
     <title>main</title>
 </head>
 <style>
 </style>
 
 <body>
+    <form method="post" action="/process/main">
     <div>
     <h1>layout 이렇게 하는게 어떠냐???</h1>
     <div id="header">
         <h2>header</h2>
-        <div id="user1"><a href="회원가입/일반회원가입.html">일반회원가입</a></div>
-        <div id="user2"><a href="회원가입/강사회원가입.html">강사회원가입|</div>
+        <div id="user1"><a href="login/일반회원가입.html">일반회원가입</a></div>
+        <div id="user2"><a href="login/강사회원가입.html">강사회원가입|</div>
         <div id="login"><a href="login/login.html">로그인|</a></div>
     </div>
 
@@ -47,6 +48,7 @@
     <div id="footer">
         <h2>footer</h2>
     </div>
+</form>
 </body>
-<script src="Js/main.js"></script>
+<script></script>
 </html>
