--- a/finalproject/public/login/강사회원가입.html
+++ b/finalproject/public/login/강사회원가입.html
@@ -39,8 +39,8 @@
             <input type="text" id="id" name="id" placeholder="아이디"><br>
             <input type="password" id="pw1" name="pw1" placeholder="비밀번호"><br>
             <input type="password" id="pw2" name="pw2" placeholder="비밀번호 확인"><br>
-            프로필사진<input type="file" name="resume"><br>
-            자격증<input type="file" name="resume"><br>
+            프로필사진<input type="file" name="resume1"><br>
+            자격증<input type="file" name="resume2"><br>
             <input type="text" id="user" name="userName" placeholder="이름을 입력하세요."><br>
             <input type="text" id="phoneNumber" name="Phone" placeholder="연락처"><br>
             <button>회원가입</button>
